// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试 SwipePanel duration 1`] = `
.c0 {
  position: relative;
  -webkit-transition: -webkit-transform 4000ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 4000ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 4000ms cubic-bezier(0.4,0,0.2,1);
}

<div
  className="c0"
  onTransitionEnd={[Function]}
>
  <div>
    AAA
  </div>
</div>
`;

exports[`测试 SwipePanel horizontal 1`] = `
.c0 {
  position: relative;
  -webkit-transition: -webkit-transform 450ms cubic-bezier(0.4,0,0.2,1);
  -webkit-transition: transform 450ms cubic-bezier(0.4,0,0.2,1);
  transition: transform 450ms cubic-bezier(0.4,0,0.2,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100000px;
  height: 100%;
}

<div
  className="c0"
  onTransitionEnd={[Function]}
>
  <div>
    AAA
  </div>
</div>
`;

exports[`测试 SwipePanel vertical 1`] = `
.c0 {
  position: relative;
}

<div
  className="c0"
  onTransitionEnd={[Function]}
>
  <div>
    AAA
  </div>
</div>
`;
